[gd_scene load_steps=25 format=3 uid="uid://52v785xaaqku"]

[ext_resource type="Texture2D" uid="uid://ccx6rtwk63dg5" path="res://Assets/Enemy Sprite/boss_front.png" id="1_5mk25"]
[ext_resource type="Shader" path="res://Shader/dissolve.gdshader" id="1_12oi2"]
[ext_resource type="Script" path="res://Scenes/Enemies/boss_clone.gd" id="2_8j1is"]
[ext_resource type="Material" uid="uid://bv3bavguqjynk" path="res://Shader/flash_shader.tres" id="2_rcmrm"]
[ext_resource type="PackedScene" uid="uid://bymo4b7emw3qo" path="res://Scenes/Components/health_component.tscn" id="2_vs60w"]
[ext_resource type="Texture2D" uid="uid://bflxww33glovf" path="res://Assets/Enemy Sprite/boss_shield.png" id="3_2kbvs"]
[ext_resource type="Texture2D" uid="uid://cnlxucnbad27i" path="res://Assets/Enemy Sprite/Gravity-Sheet.png" id="4_j77dm"]
[ext_resource type="PackedScene" uid="uid://k7o0o1pidjrf" path="res://Scenes/Components/hurt_box_component.tscn" id="4_om10w"]

[sub_resource type="FastNoiseLite" id="FastNoiseLite_2fqfx"]

[sub_resource type="NoiseTexture2D" id="NoiseTexture2D_xm86m"]
noise = SubResource("FastNoiseLite_2fqfx")

[sub_resource type="ShaderMaterial" id="ShaderMaterial_1hxrr"]
shader = ExtResource("1_12oi2")
shader_parameter/value = 0.0
shader_parameter/noise_texture = SubResource("NoiseTexture2D_xm86m")

[sub_resource type="FastNoiseLite" id="FastNoiseLite_tlxlf"]

[sub_resource type="NoiseTexture2D" id="NoiseTexture2D_5wp3c"]
noise = SubResource("FastNoiseLite_tlxlf")

[sub_resource type="ShaderMaterial" id="ShaderMaterial_lc7ch"]
shader = ExtResource("1_12oi2")
shader_parameter/value = 1.0
shader_parameter/noise_texture = SubResource("NoiseTexture2D_5wp3c")

[sub_resource type="AtlasTexture" id="AtlasTexture_lk6el"]
atlas = ExtResource("3_2kbvs")
region = Rect2(0, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_x4en7"]
atlas = ExtResource("3_2kbvs")
region = Rect2(64, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_8ek46"]
atlas = ExtResource("3_2kbvs")
region = Rect2(128, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_jcms1"]
atlas = ExtResource("3_2kbvs")
region = Rect2(192, 0, 64, 64)

[sub_resource type="SpriteFrames" id="SpriteFrames_hjwct"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_lk6el")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_x4en7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8ek46")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jcms1")
}],
"loop": true,
"name": &"default",
"speed": 7.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_k70ry"]
radius = 30.0

[sub_resource type="Animation" id="Animation_qjv0o"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:material:shader_parameter/value")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [1.0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("ShieldHurtBox/AnimatedSprite2D:material:shader_parameter/value")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [1.0]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sprite2D:scale")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1, 1)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Sprite2D:modulate")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("ShieldHurtBox:visible")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="Animation" id="Animation_hoapm"]
resource_name = "appear"
length = 1.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Vortex:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.0666667, 0.133333, 0.2, 0.266667, 0.333333, 0.4, 0.466667, 0.533333, 0.6, 0.666667, 0.733333, 0.8, 0.866667, 0.933333, 1, 1.06667, 1.13333, 1.2, 1.26667),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14, 15, 16, 17, 18, 19]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Vortex:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.966667, 1.43333),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sprite2D:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 1.06667, 1.46667),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Sprite2D:scale")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(1.1, 1.2, 1.46667),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(1, 1), Vector2(1.1, 1.1), Vector2(1, 1)]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("Sprite2D:material:shader_parameter/value")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [1.0]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("ShieldHurtBox:visible")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0, 1.23333),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [false, true]
}

[sub_resource type="Animation" id="Animation_holge"]
resource_name = "clone_death"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:material:shader_parameter/value")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 1),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [1.0, 1.0, 0.0]
}
tracks/1/type = "method"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(1),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"queue_free"
}]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("ShieldHurtBox/AnimatedSprite2D:material:shader_parameter/value")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.966667),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [1.0, 0.0]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_0t8en"]
_data = {
"RESET": SubResource("Animation_qjv0o"),
"appear": SubResource("Animation_hoapm"),
"clone_death": SubResource("Animation_holge")
}

[node name="BossClone" type="CharacterBody2D"]
material = SubResource("ShaderMaterial_1hxrr")
script = ExtResource("2_8j1is")

[node name="HealthComponent" parent="." instance=ExtResource("2_vs60w")]
max_health = 20
current_health = 30

[node name="Vortex" type="Sprite2D" parent="."]
modulate = Color(1, 1, 1, 0)
position = Vector2(0, -24)
texture = ExtResource("4_j77dm")
hframes = 4
vframes = 5
frame = 19

[node name="Sprite2D" type="Sprite2D" parent="."]
material = SubResource("ShaderMaterial_lc7ch")
position = Vector2(0, -24)
texture = ExtResource("1_5mk25")
hframes = 3
frame = 1

[node name="ShieldHurtBox" parent="." node_paths=PackedStringArray("health_component") instance=ExtResource("4_om10w")]
visible = false
position = Vector2(-24, -1)
collision_layer = 68
collision_mask = 2
health_component = NodePath("../HealthComponent")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="ShieldHurtBox"]
modulate = Color(1, 1, 1, 0.388235)
material = ExtResource("2_rcmrm")
position = Vector2(24, -21)
sprite_frames = SubResource("SpriteFrames_hjwct")
autoplay = "default"
frame_progress = 0.68871

[node name="CollisionShape2D" type="CollisionShape2D" parent="ShieldHurtBox"]
position = Vector2(24, -20)
shape = SubResource("CircleShape2D_k70ry")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_0t8en")
}

[node name="MarkerRight" type="Marker2D" parent="."]
position = Vector2(30, -20)

[node name="MarkerLeft" type="Marker2D" parent="."]
position = Vector2(-30, -20)

[connection signal="died" from="HealthComponent" to="." method="_on_health_component_died"]
[connection signal="health_changed" from="HealthComponent" to="." method="_on_health_component_health_changed"]
